# hitl_example

./: .gitignore  README.md  pyproject.toml  report.md  requirements.txt
src/hitl_example/: crew.py  main.py
src/hitl_example/config/: agents.yaml  tasks.yaml
src/hitl_example/models/: __init__.py  crew_models.py
src/hitl_example/tools/: human_tool.py
